vpc/sg_app-lb-Appserver.tf
resource "aws_security_group" "appsever-app-lb" {
  name   = "${var.VPC_PROJECT_NAME}-appserver-alb"
  vpc_id = "${aws_vpc.project1.id}"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
