vpc/sg_web_server.tf
resource "aws_security_group" "for_web_server" {
	name = "${var.VPC_PROJECT_NAME}-web-security-group"
	description = "Created by Rajesh"
	vpc_id = "${aws_vpc.project1.id}"
	
	ingress {
		from_port = 22
		to_port = 22
		protocol = "tcp"
		cidr_blocks = ["${var.SSH_CIDR_WEB_SERVER}"]
	}
	ingress {
		from_port = 80
		to_port = 80
		protocol = "tcp"
		cidr_blocks = ["0.0.0.0/0"]
	}
	ingress {
		from_port = 443
		to_port = 443
		protocol = "tcp"
		cidr_blocks = ["0.0.0.0/0"]
	}
	egress {
		from_port = 0
		to_port = 0
		protocol = "-1"
		cidr_blocks = ["0.0.0.0/0"]
	}
}
